--- a/theme/default/css/defines.css
+++ b/theme/default/css/defines.css
@@ -17,7 +17,11 @@
 .width-400 {width:400px;}
 .width-500 {width:500px;}
 
+.width-5p {width:5%;}
+.width-10p {width:10%;}
+.width-15p {width:15%;}
 .width-20p {width:20%;}
+.width-25p {width:25%;}
 .width-50p {width:50%;}
 .width-75p {width:75%;}
 .width-80p {width:80%;}
